--- a/css/layout.css
+++ b/css/layout.css
@@ -5,9 +5,15 @@
   width: 100%;
   height: 100vh;
 }
-.main_visual .visual_slide .img_wrap { height: 100%; }
-.main_visual .visual_slide .img_wrap .pc { display: block; }
-.main_visual .visual_slide .img_wrap .mobile { display: none; }
+.main_visual .visual_slide .img_wrap {
+  height: 100%;
+}
+.main_visual .visual_slide .img_wrap .pc {
+  display: block;
+}
+.main_visual .visual_slide .img_wrap .mobile {
+  display: none;
+}
 .main_visual .visual_slide .img_wrap img {
   width: 100%;
   height: 100%;
@@ -43,11 +49,10 @@
   background: #fff;
 }
 
-
 /* 메인 제품 섹션 */
-.main_product { 
+.main_product {
   padding: 165px 0;
-  background: #FBF3EB;
+  background: #fbf3eb;
 }
 .main_product .product_slide .product {
   max-width: 372px;
@@ -71,31 +76,44 @@
   text-align: center;
 }
 
-.main_product .product_slide .swiper-scrollbar { opacity: 0; }
-
+.main_product .product_slide .swiper-scrollbar {
+  opacity: 0;
+}
 
 /* 메인 메이크업 섹션 */
-.main_makeup { 
+.main_makeup {
   padding: 65px 0 150px;
   background: url(../images/main_makeup_bg.jpg) no-repeat 50% 0%;
   background-size: initial;
 }
-.main_makeup .makeup_visual { text-align: center; }
-.main_makeup .makeup_visual .visual { width: 475px; }
-.main_makeup .makeup_visual .text { margin: 94px 0 80px; }
+.main_makeup .makeup_visual {
+  text-align: center;
+}
+.main_makeup .makeup_visual .visual {
+  width: 475px;
+}
+.main_makeup .makeup_visual .text {
+  margin: 94px 0 80px;
+}
 
 .main_makeup .makeup_slide {
   max-width: 1500px;
   min-width: 320px;
   padding-bottom: 20px;
 }
-.main_makeup .makeup_slide .slide { padding: 8px 8px; }
+.main_makeup .makeup_slide .slide {
+  padding: 8px 8px;
+}
 .main_makeup .makeup_slide .slide .img_wrap {
   display: block;
   overflow: hidden;
 }
-.main_makeup .makeup_slide .slide .img_wrap img { transition: all 0.5s ease; }
-.main_makeup .makeup_slide .slide .img_wrap img:hover { transform: scale(1.1); }
+.main_makeup .makeup_slide .slide .img_wrap img {
+  transition: all 0.5s ease;
+}
+.main_makeup .makeup_slide .slide .img_wrap img:hover {
+  transform: scale(1.1);
+}
 .main_makeup .makeup_slide .slide .cate {
   position: relative;
   left: 10px;
@@ -129,13 +147,16 @@
   height: 3px;
   top: -1px;
   border-radius: 0px;
-  background: #A6A6A6;
+  background: #a6a6a6;
 }
 
-
 /* 메인 순정 섹션 */
-.main_soonjung { padding: 65px 0 60px; }
-.main_soonjung .inner { display: flex; }
+.main_soonjung {
+  padding: 65px 0 60px;
+}
+.main_soonjung .soonjung_area {
+  display: flex;
+}
 .main_soonjung .soonjung_visual {
   width: 50%;
   border-radius: 0px 4px 4px 0px;
@@ -145,7 +166,6 @@
   width: 50%;
   padding: 0 68px 0 34px;
 }
-.main_soonjung .soonjung_slide .swiper-wrapper { flex-wrap: wrap; }
 .main_soonjung .soonjung_slide .slide {
   height: 50%;
   padding: 0 5px 12px;
@@ -175,7 +195,7 @@
   visibility: hidden;
   transition: opacity 0.5s ease, transform 2s cubic-bezier(0, 0, 0.44, 1.18);
 }
-.main_soonjung .soonjung_slide .slide .txt_wrap { 
+.main_soonjung .soonjung_slide .slide .txt_wrap {
   padding: 15px 20px;
   background: #fff;
   letter-spacing: -0.02em;
@@ -201,34 +221,61 @@
   font-size: 18px;
   font-weight: 400;
 }
-.main_soonjung .soonjung_slide .slide .txt_wrap .price strong { font-weight: 600; }
+.main_soonjung .soonjung_slide .slide .txt_wrap .price strong {
+  font-weight: 600;
+}
 
-.main_soonjung .soonjung_slide .swiper-scrollbar { opacity: 0; }
-
+.main_soonjung .soonjung_slide .swiper-scrollbar {
+  opacity: 0;
+}
 
 /* 메인 선물 섹션 */
-.main_gift { padding-top: 60px; }
+.main_gift {
+  padding-top: 60px;
+}
+.main_gift .inner {
+  max-width: 1200px;
+  min-width: 320px;
+  margin: 0 auto;
+}
+.main_gift .gift_slide .slide {
+  padding: 0 10px;
+}
+.main_gift .gift_slide .product {
+  display: block;
+  padding: 12px 0px;
+  position: relative;
+}
+.main_gift .gift_slide .product .img_wrap {
+  overflow: hidden;
+}
+.main_gift .gift_slide .product .img_wrap img {
+  transition: all 0.4s ease;
+}
+.main_gift .gift_slide .product .img_wrap:hover img {
+  transform: scale(1.09);
+}
+.main_gift .gift_slide .product .kakao {
+  position: absolute;
+  right: 16px;
+  top: 24px;
+  padding: 2px 10px;
+  border-radius: 2px;
+  background: #feda00;
+  font-size: 14px;
+  font-weight: 500;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.main_gift .gift_slide .btn_arrow {
+  opacity: 0;
+}
 
 /* 타블렛 분기점02 */
 @media (max-width: 1024px) {
   /* 메인 제품 섹션 */
-  .main_product .product_slide { padding-bottom: 50px; }
+  .main_product .product_slide {
+    padding-bottom: 50px;
+  }
   .main_product .product_slide .txt_wrap .name {
     margin-bottom: 8px;
     min-height: 40px;
@@ -244,30 +291,37 @@
     left: 16px;
     width: calc(100% - 32px);
     height: 1px;
-    background: #E7E8EA;
+    background: #e7e8ea;
   }
   .main_product .product_slide .swiper-scrollbar-drag {
     height: 3px;
     top: -1px;
     border-radius: 0px;
-    background: #A6A6A6;
+    background: #a6a6a6;
   }
-  
 
   /* 메인 순정 섹션 */
-  .main_soonjung { 
+  .main_soonjung {
     height: 100vh;
     position: relative;
     z-index: 0;
   }
-  .main_soonjung .tit_wrap .main_tit .ico_tit { display: none; }
-  .main_soonjung .tit_wrap .main_btn_wrap { display: none; }
+  .main_soonjung .tit_wrap .main_tit .ico_tit {
+    display: none;
+  }
+  .main_soonjung .tit_wrap .main_btn_wrap {
+    display: none;
+  }
   .main_soonjung .tit_wrap {
     margin-top: 30vh;
     color: #fff;
   }
-  .main_soonjung .tit_wrap .main_tit { margin-bottom: 8px; }
-  .main_soonjung .tit_wrap .main_txt { display: block; }
+  .main_soonjung .tit_wrap .main_tit {
+    margin-bottom: 8px;
+  }
+  .main_soonjung .tit_wrap .main_txt {
+    display: block;
+  }
 
   .main_soonjung .soonjung_visual {
     position: absolute;
@@ -279,14 +333,14 @@
   }
   .main_soonjung .soonjung_slide {
     width: 100%;
-    padding: 100px 12px 20px;
   }
-  .main_soonjung .soonjung_slide .swiper-wrapper { flex-wrap: nowrap; }
   .main_soonjung .soonjung_slide .slide .img_wrap:hover .img_hv {
     opacity: 0;
     visibility: hidden;
   }
-  .main_soonjung .soonjung_slide .slide .txt_wrap { padding: 6px 10px; }
+  .main_soonjung .soonjung_slide .slide .txt_wrap {
+    padding: 6px 10px;
+  }
   .main_soonjung .soonjung_slide .slide .txt_wrap .name {
     display: -webkit-box;
     -webkit-line-clamp: 2;
@@ -299,51 +353,79 @@
     border: none;
   }
 
-
-
-
-
-
-
-
-  
+  /* 메인 선물 섹션 */
+  .main_gift .inner {
+    max-width: 800px;
+  }
+  .main_gift .gift_slide .product {
+    padding: 12px 8px;
+  }
+  .main_gift .gift_slide .product .img_wrap:hover img {
+    transform: scale(1);
+  }
+  .main_gift .gift_slide .btn_arrow {
+    opacity: 1;
+    z-index: 1000;
+    width: 14px;
+    height: 27px;
+    margin: 0;
+  }
+  .main_gift .gift_slide .swiper-button-prev {
+    left: 0px;
+    background: url(../images/ico_arrow02.png) no-repeat 50% 50% / cover;
+    transform: rotateZ(180deg);
+  }
+  .main_gift .gift_slide .swiper-button-next {
+    right: 0px;
+    background: url(../images/ico_arrow02.png) no-repeat 50% 50% / cover;
+  }
 }
-  
-  
-  
-  /* 모바일 분기점 */
+
+/* 모바일 분기점 */
 @media (max-width: 768px) {
   /* 메인 비주얼 섹션 */
-  .main_visual .visual_slide .img_wrap .pc { display: none; }
-  .main_visual .visual_slide .img_wrap .mobile { display: block; }
+  .main_visual .visual_slide .img_wrap .pc {
+    display: none;
+  }
+  .main_visual .visual_slide .img_wrap .mobile {
+    display: block;
+  }
   .main_visual .visual_slide .txt_wrap {
     left: 35px;
     bottom: 140px;
   }
-  .main_visual .visual_slide .txt_wrap .tit { font-size: 26px; }
-  .main_visual .visual_slide .txt_wrap .txt { font-size: 14px; }
+  .main_visual .visual_slide .txt_wrap .tit {
+    font-size: 26px;
+  }
+  .main_visual .visual_slide .txt_wrap .txt {
+    font-size: 14px;
+  }
   .main_visual .visual_slide .swiper-scrollbar {
     left: 30px;
     bottom: 100px;
-    width: calc(100% - 60px); 
+    width: calc(100% - 60px);
   }
 
-
   /* 메인 제품 섹션 */
-  .main_product { padding: 34px 0 24px; }
-
+  .main_product {
+    padding: 34px 0 24px;
+  }
 
   /* 메인 메이크업 섹션 */
-  .main_makeup { 
+  .main_makeup {
     padding: 30px 0 60px;
     background-size: 160% auto;
   }
-  .main_makeup .makeup_visual .visual { width: 60%; }
-  .main_makeup .makeup_visual .text { 
+  .main_makeup .makeup_visual .visual {
+    width: 60%;
+  }
+  .main_makeup .makeup_visual .text {
     width: 80%;
     margin: 24px 0 40px;
   }
-  .main_makeup .makeup_slide .slide { width: 85%; }
+  .main_makeup .makeup_slide .slide {
+    width: 85%;
+  }
   .main_makeup .makeup_slide .slide .cate {
     left: 8px;
     top: 28px;
@@ -359,7 +441,6 @@
     height: 34px;
   }
 
-
   /* 메인 순정 섹션 */
   .main_soonjung .tit_wrap {
     display: block;
@@ -370,10 +451,14 @@
     width: 60%;
     height: auto;
   }
-  .main_soonjung .soonjung_slide .slide .txt_wrap { padding: 4px 8px; }
-  .main_soonjung .soonjung_slide .slide .txt_wrap .tag { font-size: 11px; }
+  .main_soonjung .soonjung_slide .slide .txt_wrap {
+    padding: 4px 8px;
+  }
+  .main_soonjung .soonjung_slide .slide .txt_wrap .tag {
+    font-size: 11px;
+  }
   .main_soonjung .soonjung_slide .slide .txt_wrap .name {
-    min-height: inherit;   
+    min-height: inherit;
     line-height: 20px;
     font-size: 14px;
   }
@@ -381,19 +466,29 @@
     line-height: 26px;
     font-size: 16px;
   }
-  
-  .main_soonjung .soonjung_slide .swiper-scrollbar { 
+
+  .main_soonjung .soonjung_slide .swiper-scrollbar {
     opacity: 1;
     height: 1px;
-    background: #E7E8EA;
+    background: #e7e8ea;
   }
   .main_soonjung .soonjung_slide .swiper-scrollbar-drag {
     height: 3px;
     top: -1px;
     border-radius: 0px;
-    background: #A6A6A6;
+    background: #a6a6a6;
   }
 
+  /* 메인 선물 섹션 */
+  .main_gift .tit_wrap {
+    margin-bottom: 24px;
+  }
+  .main_gift .gift_slide .slide {
+    width: 90%;
+    padding: 0;
+  }
 
-
+  .main_gift .gift_slide .btn_arrow {
+    opacity: 0;
+  }
 }
